# lab2_AMH

./: README.md  pyproject.toml
unsupervised/clustering/: kmean.py  kmedoids.py
unsupervised/dim_red/: pca.py  svd.py  tsne.py
