[tool.poetry]
name = "unsupervised"
version = "0.1.0"
description = "Lab II - Clustering"
authors = ["Alejandro Martinez <alejandro.martinezh@udea.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
scikit-learn-extra = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
